--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -215,14 +215,334 @@
             </table>
         </div>
 
-        <!-- Drawing canvas where all animation is done.  Note:  can be resized in code -->
-
-        <canvas id="canvas" width="1024" height="1080"></canvas>
+        <div id="numbers_container" class="container-fluid">
+			
+		</div>
+		
+		<div id="table_container" class = "container-fluid">
+				<div class = "row"> 
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+				</div>
+			<div class = "row"> 
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+				</div>
+			<div class = "row"> 
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+				</div>
+			<div class = "row"> 
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+				</div>
+			<div class = "row"> 
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+				</div>
+			<div class = "row"> 
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+				</div>
+			<div class = "row"> 
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+				</div>
+			<div class = "row"> 
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						1
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+					<div class = "col-sm">
+						2
+						<hr />
+						<p>1</p>
+					</div>
+				</div>
+			</div>
 
         <div id="AnimationControlSection">
-            <!-- Table for buttons to control general animation (play/pause/undo/etc) ->
-<!-- (filled in by javascript code, specifically AnimationMain.js)  -->
-
             <table id="AnimationControls"></table>
         </div>
 
@@ -230,14 +550,11 @@
     <!-- mainContent -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
-        <div class="footer">
-
+    <div class="py-1 bg-dark footer">
             <p class="m-0 text-center text-white">MIT License</p>
             <p class="m-0 text-center text-white">Copyright &copy; Anastasios Tilsizoglou 2018</p>
-        </div>
         <!-- /.footer -->
-    </footer>
+    </div>
 
 </div>
 <!-- container -->
