creating the table

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -216,331 +216,12 @@
         </div>
 
         <div id="numbers_container" class="container-fluid">
-			
-		</div>
-		
-		<div id="table_container" class = "container-fluid">
-				<div class = "row"> 
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-				</div>
-			<div class = "row"> 
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-				</div>
-			<div class = "row"> 
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-				</div>
-			<div class = "row"> 
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-				</div>
-			<div class = "row"> 
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-				</div>
-			<div class = "row"> 
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-				</div>
-			<div class = "row"> 
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-				</div>
-			<div class = "row"> 
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						1
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-					<div class = "col-sm">
-						2
-						<hr />
-						<p>1</p>
-					</div>
-				</div>
-			</div>
+
+        </div>
+
+        <div id="table_container" class="container-fluid">
+
+        </div>
 
         <div id="AnimationControlSection">
             <table id="AnimationControls"></table>
@@ -549,12 +230,12 @@
     </div>
     <!-- mainContent -->
 
-    <!-- Footer -->
-    <div class="py-1 bg-dark footer">
-            <p class="m-0 text-center text-white">MIT License</p>
-            <p class="m-0 text-center text-white">Copyright &copy; Anastasios Tilsizoglou 2018</p>
-        <!-- /.footer -->
+    <!-- Footer
+    <div class="bg-dark navbar fixed-bottom footer">
+        <p class="m-0 text-center text-white">MIT License</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Anastasios Tilsizoglou 2018</p>
     </div>
+     /.footer -->
 
 </div>
 <!-- container -->
