--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -173,37 +173,37 @@
         <table id="inputs">
             <tr>
                 <td>
-                    <input class="form-control" min="0" max="99999999" id="arraySize" type="number"
-                           placeholder="Specify Array Size"/>
+                    <input class="form-control" min="0" max="9999" id="arraySize" type="number"
+                           placeholder="Specify Array Size (Default Value: 100)"/>
                 </td>
                 <td>
-                    <input class="form-control" min="0" max="99999999" id="numbersRange" type="number"
-                           placeholder="Specify Numbers Range"/>
+                    <input class="form-control" min="0" max="9999" id="numbersRange" type="number"
+                           placeholder="Specify Numbers Range (Default Value: 100)"/>
                 </td>
                 <td>
                     <input class="btn btn-info" id="generateNumbers" type="button" value="Generate Numbers"/>
                 </td>
                 <td>
-                    <input class="form-control" min="0" max="99999999" id="searchingNumber" type="number"
+                    <input class="form-control" min="0" max="9999" id="searchingNumber" type="number"
                            placeholder="Specify Searching Number"/>
                 </td>
             </tr>
         </table>
 
         <div id="buttons" class="btn-group" role="group">
-            <button type="button" class="btn btn-secondary">Linear Search</button>
-            <button type="button" class="btn btn-secondary">Binary Search</button>
-            <button type="button" class="btn btn-secondary">Jump Search</button>
-            <button type="button" class="btn btn-secondary">Interpolation Search</button>
-            <button type="button" class="btn btn-secondary">Fibonacci Search</button>
-            <button type="button" class="btn btn-secondary">Stratos Search</button>
+            <button id="linearSearch" type="button" class="btn btn-secondary">Linear Search</button>
+            <button id="binarySearch" type="button" class="btn btn-secondary">Binary Search</button>
+            <button id="jumpSearch" type="button" class="btn btn-secondary">Jump Search</button>
+            <button id="interpolationSearch" type="button" class="btn btn-secondary">Interpolation Search</button>
+            <button id="fibonacciSearch" type="button" class="btn btn-secondary">Fibonacci Search</button>
+            <button id="stratosSearch" type="button" class="btn btn-secondary">Stratos Search</button>
         </div>
 
         <div id="stepButtons" class="btn-group" role="group">
-            <button type="button" class="btn btn-outline-secondary">Undo Step</button>
-            <button type="button" class="btn btn-outline-secondary">Pause</button>
-            <button type="button" class="btn btn-outline-secondary">Next Step</button>
-            <button type="button" class="btn btn-outline-secondary">Skip Forward</button>
+            <button id="undo" type="button" class="btn btn-outline-secondary">Undo Step</button>
+            <button id="pause" type="button" class="btn btn-outline-secondary">Pause</button>
+            <button id="next" type="button" class="btn btn-outline-secondary">Next Step</button>
+            <button id="skipForward" type="button" class="btn btn-outline-secondary">Skip Forward</button>
         </div>
     </div>
 
@@ -242,6 +242,7 @@
 
 <!--myScripts-->
 <script src="GenerateRandomNumbers.js"></script>
+<script src="LinearSearch.js"></script>
 </body>
 
 </html>
