linear search is half completed

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -174,11 +174,11 @@
             <tr>
                 <td>
                     <input class="form-control" min="0" max="9999" id="arraySize" type="number"
-                           placeholder="Specify Array Size (Default Value: 100)"/>
+                           placeholder="Specify Array Size (Default: 100)"/>
                 </td>
                 <td>
                     <input class="form-control" min="0" max="9999" id="numbersRange" type="number"
-                           placeholder="Specify Numbers Range (Default Value: 100)"/>
+                           placeholder="Specify Numbers Range (Default: 100)"/>
                 </td>
                 <td>
                     <input class="btn btn-info" id="generateNumbers" type="button" value="Generate Numbers"/>
