little things, more later

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -165,7 +165,7 @@
     </div>
 </div>
 <!-- Page Content -->
-<div id="container">
+<div id="body_container">
 
     <div id="AlgorithmControlSection">
         <!-- Table for buttons to control specific animation (insert/find/etc) -->
@@ -207,12 +207,11 @@
         </div>
     </div>
 
-
-    <div id="numbers_container" class="container-fluid">
+    <div id="table_container" class="container-fluid">
 
     </div>
-
-    <div id="table_container" class="container-fluid">
+	
+	<div id="code_container" class="container-fluid">
 
     </div>
 
