linear search step by step having problems

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -207,11 +207,11 @@
         </div>
     </div>
 
-    <div id="table_container" class="container-fluid">
+    <div id="table_container" class="container-fluid" align="center">
 
     </div>
-	
-	<div id="code_container" class="container-fluid">
+
+    <div id="code_container" class="container-fluid" align="center">
 
     </div>
 
