binary search implemented somethings to be seen more

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -241,7 +241,10 @@
 
 <!--myScripts-->
 <script src="GenerateRandomNumbers.js"></script>
+<script src="GeneralFunctions.js"></script>
 <script src="LinearSearch.js"></script>
+<script src="BinarySearch.js"></script>
+
 </body>
 
 </html>
