jump search issues, need help

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -240,10 +240,12 @@
         crossorigin="anonymous"></script>
 
 <!--myScripts-->
-<script src="GenerateRandomNumbers.js"></script>
-<script src="GeneralFunctions.js"></script>
-<script src="LinearSearch.js"></script>
-<script src="BinarySearch.js"></script>
+<script type="text/javascript" src="GenerateRandomNumbers.js"></script>
+<script type="text/javascript" src="GeneralFunctions.js"></script>
+<script type="text/javascript" src="LinearSearch.js"></script>
+<script type="text/javascript" src="BinarySearch.js"></script>
+<script type="text/javascript" src="JumpSearch.js"></script>
+
 
 </body>
 
