--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -16,8 +16,8 @@
     <meta name="author" content="">
 
     <!-- css sheet for how the page is laid out -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
 
     <!--Scripts for Modal-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -46,205 +46,198 @@
 <script src="ThirdParty/jquery-1.5.2.min.js"></script>
 <script src="ThirdParty/jquery-ui-1.8.11.custom.min.js"></script>-->
 
-    <!-- Javascript for the actual visualization code -->
-    <!--<script type = "text/javascript" src = ""> </script>-->
-
 
 </head>
 
 <body class="MainPageStyling">
 
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-        <a class="navbar-brand" href="HomeScreen.html">
-            <img src="resources/logo1.png"/> Implementation and use of Search in Visualized Environment</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="HomeScreen.html">
-                        <img src="resources/ic_action_home.png"/> Home
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="modal" data-target="#myModal">
-                        <img src="resources/ic_action_info.png"/> About</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <!--<h5 class="modal-title" id="myModalLabel">About</h5>-->
-                <img src="resources/teiser_logo.png"/>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <table>
-                    <tr>
-                        <td>
-                            <img src="resources/ic_action_thesis.png"/>
-                        </td>
-                        <td>
-                            <b>
-                                <p>Thesis</p>
-                            </b>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img src="resources/ic_action_subject.png"/>
-                        </td>
-                        <td>
-                            <p>Development of an application for the Implemantation and use of search methods in a
-                                visualized enviroment</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img src="resources/ic_action_supervisor.png"/>
-                        </td>
-                        <td>
-                            <p>Supervisor Professor: Evangelos Outsios</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img src="resources/ic_action_person.png"/>
-                        </td>
-                        <td>
-                            <p>Student: Anastasios Tilsizoglou</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img src="resources/ic_action_credit.png"/>
-                        </td>
-                        <td>
-                            <p>AEM: 3878</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img src="resources/ic_action_link.png"/>
-                        </td>
-                        <td>
-                            <a href="https://git.io/vAM41">Github Repository</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img src="resources/ic_action_public.png"/>
-                        </td>
-                        <td>
-                            <p>
-                                <a href="https://git.io/vAM4F">MIT License</a>
-                                <br/>Copyright &copy;
-                                <a href="https://git.io/vNjE6">Anastasios Tilsizoglou</a>
-                            </p>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="HomeScreen.html">
+                <img src="resources/logo1.png" /> Implementation and use of Search in Visualized Environment</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="HomeScreen.html">
+                            <img src="resources/ic_action_home.png" /> Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="modal" data-target="#myModal">
+                            <img src="resources/ic_action_info.png" /> About</a>
+                    </li>
+                </ul>
             </div>
         </div>
+    </nav>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <img src="resources/teiser_logo.png" />
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <table>
+                        <tr>
+                            <td>
+                                <img src="resources/ic_action_thesis.png" />
+                            </td>
+                            <td>
+                                <b>
+                                    <p>Thesis</p>
+                                </b>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="resources/ic_action_subject.png" />
+                            </td>
+                            <td>
+                                <p>Development of an application for the Implemantation and use of search methods in a visualized
+                                    enviroment
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="resources/ic_action_supervisor.png" />
+                            </td>
+                            <td>
+                                <p>Supervisor Professor: Evangelos Outsios</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="resources/ic_action_person.png" />
+                            </td>
+                            <td>
+                                <p>Student: Anastasios Tilsizoglou</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="resources/ic_action_credit.png" />
+                            </td>
+                            <td>
+                                <p>AEM: 3878</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="resources/ic_action_link.png" />
+                            </td>
+                            <td>
+                                <a href="https://git.io/vAM41">Github Repository</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="resources/ic_action_public.png" />
+                            </td>
+                            <td>
+                                <p>
+                                    <a href="https://git.io/vAM4F">MIT License</a>
+                                    <br/>Copyright &copy;
+                                    <a href="https://git.io/vNjE6">Anastasios Tilsizoglou</a>
+                                </p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-<!-- Page Content -->
-<div id="body_container">
+    <!-- Page Content -->
+    <div id="body_container">
 
-    <div id="AlgorithmControlSection">
-        <!-- Table for buttons to control specific animation (insert/find/etc) -->
-        <!-- (filled in by javascript code specific to the animation) -->
-        <table id="inputs">
-            <tr>
-                <td>
-                    <input class="form-control" min="0" max="9999" id="arraySize" type="number"
-                           placeholder="Specify Array Size (Default: 100)"/>
-                </td>
-                <td>
-                    <input class="form-control" min="0" max="9999" id="numbersRange" type="number"
-                           placeholder="Specify Numbers Range (Default: 100)"/>
-                </td>
-                <td>
-                    <input class="btn btn-info" id="generateNumbers" type="button" value="Generate Numbers"/>
-                </td>
-                <td>
-                    <input class="form-control" min="0" max="9999" id="searchingNumber" type="number"
-                           placeholder="Specify Searching Number"/>
-                </td>
-            </tr>
-        </table>
+        <div id="AlgorithmControlSection">
+            <div class="input-group" role="group">
+                <input class="form-control" min="0" max="9999" id="arraySize" type="number" placeholder="Specify Array Size (Default: 100)"
+                />
+                <input class="form-control" min="0" max="9999" id="numbersRange" type="number" placeholder="Specify Numbers Range (Default: 100)"
+                />
+                <div class="btn-group">
+                    <button type="button" id="generateNumbers" class="btn btn-info">Generate Numbers</button>
+                    <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        <span class="sr-only">Toggle Dropdown</span>
+                    </button>
+                    <div class="dropdown-menu">
+                        <button class="dropdown-item" type="button" id="exponential">Exponential Distribution</button>
+                        <button class="dropdown-item" type="button" id="logarithmic">Logarithmic Distribution</button>
+                        <button class="dropdown-item" type="button" id="geometric">Geometric Distribution</button>
+                    </div>
+                </div>
+                <input class="form-control" min="0" max="9999" id="searchingNumber" type="number" placeholder="Specify Searching Number"
+                />
+            </div>
 
-        <div id="buttons" class="btn-group" role="group">
-            <button id="linearSearch" type="button" class="btn btn-secondary">Linear Search</button>
-            <button id="binarySearch" type="button" class="btn btn-secondary">Binary Search</button>
-            <button id="jumpSearch" type="button" class="btn btn-secondary">Jump Search</button>
-            <button id="interpolationSearch" type="button" class="btn btn-secondary">Interpolation Search</button>
-            <button id="fibonacciSearch" type="button" class="btn btn-secondary">Fibonacci Search</button>
-            <button id="stratosSearch" type="button" class="btn btn-secondary">Stratos Search</button>
+            <div id="buttons" class="btn-group" role="group">
+                <button id="linearSearch" type="button" class="btn btn-secondary">Linear Search</button>
+                <button id="binarySearch" type="button" class="btn btn-secondary">Binary Search</button>
+                <button id="jumpSearch" type="button" class="btn btn-secondary">Jump Search</button>
+                <button id="interpolationSearch" type="button" class="btn btn-secondary">Interpolation Search</button>
+                <button id="fibonacciSearch" type="button" class="btn btn-secondary">Fibonacci Search</button>
+                <button id="stratosSearch" type="button" class="btn btn-secondary">Stratos Search</button>
+            </div>
+
+            <div id="stepButtons" class="btn-group" role="group">
+                <button id="undo" type="button" class="btn btn-outline-secondary">Undo Step</button>
+                <button id="pause" type="button" class="btn btn-outline-secondary">Pause</button>
+                <button id="next" type="button" class="btn btn-outline-secondary">Next Step</button>
+                <button id="skipForward" type="button" class="btn btn-outline-secondary">Skip Forward</button>
+            </div>
         </div>
 
-        <div id="stepButtons" class="btn-group" role="group">
-            <button id="undo" type="button" class="btn btn-outline-secondary">Undo Step</button>
-            <button id="pause" type="button" class="btn btn-outline-secondary">Pause</button>
-            <button id="next" type="button" class="btn btn-outline-secondary">Next Step</button>
-            <button id="skipForward" type="button" class="btn btn-outline-secondary">Skip Forward</button>
+        <div id="table_container" class="container-fluid" align="center">
+
         </div>
+
+        <div id="code_container" class="container-fluid" align="center">
+
+        </div>
+
+        <div id="snackbar">This message handled in javascript</div>
+
+        <!--Footer-->
+        <div class="bg-dark navbar fixed-bottom footer">
+            <p class="m-0 text-center text-white">MIT License</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Anastasios Tilsizoglou 2018</p>
+        </div>
+        <!--/.footer -->
+
     </div>
+    <!-- container -->
 
-    <div id="table_container" class="container-fluid" align="center">
-
-    </div>
-
-    <div id="code_container" class="container-fluid" align="center">
-
-    </div>
-
-    <div id="snackbar">This message handled in javascript</div>
-
-    <!--Footer-->
-    <div class="bg-dark navbar fixed-bottom footer">
-        <p class="m-0 text-center text-white">MIT License</p>
-        <p class="m-0 text-center text-white">Copyright &copy; Anastasios Tilsizoglou 2018</p>
-    </div>
-    <!--/.footer -->
-
-</div>
-<!-- container -->
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-<!--myScripts-->
-<script type="text/javascript" src="GenerateRandomNumbers.js"></script>
-<script type="text/javascript" src="GeneralFunctions.js"></script>
-<script type="text/javascript" src="LinearSearch.js"></script>
-<script type="text/javascript" src="BinarySearch.js"></script>
-<script type="text/javascript" src="JumpSearch.js"></script>
+    <!--myScripts-->
+    <script type="text/javascript" src="GenerateRandomNumbers.js"></script>
+    <script type="text/javascript" src="GeneralFunctions.js"></script>
+    <script type="text/javascript" src="LinearSearch.js"></script>
+    <script type="text/javascript" src="BinarySearch.js"></script>
+    <script type="text/javascript" src="JumpSearch.js"></script>
 
 
 </body>
