warnings cleared, continue to next search completion

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -195,12 +195,12 @@
                 <button id="stratosSearch" type="button" class="btn btn-secondary">Stratos Search</button>
             </div>
 
-            <div id="stepButtons" class="btn-group" role="group">
+            <!--<div id="stepButtons" class="btn-group" role="group">
                 <button id="undo" type="button" class="btn btn-outline-secondary">Undo Step</button>
                 <button id="pause" type="button" class="btn btn-outline-secondary">Pause</button>
                 <button id="next" type="button" class="btn btn-outline-secondary">Next Step</button>
                 <button id="skipForward" type="button" class="btn btn-outline-secondary">Skip Forward</button>
-            </div>
+            </div>-->
         </div>
 
         <div id="table_container" class="container-fluid" align="center">
