--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -38,7 +38,7 @@
     <!-- /Bootstrap required Libraries-->
 
     <!--MyCss-->
-    <link rel="stylesheet" href="HomeScreen.css">
+    <link rel="stylesheet" href="stylesheets/HomeScreen.css">
 
 
     <!-- jqueury stuff.  Only used for the animation speed slider. -->
@@ -186,7 +186,7 @@
                 />
             </div>
 
-            <div id="buttons" class="btn-group" role="group">
+            <div id="searchButtons" class="btn-group" role="group">
                 <button id="linearSearch" type="button" class="btn btn-secondary">Linear Search</button>
                 <button id="binarySearch" type="button" class="btn btn-secondary">Binary Search</button>
                 <button id="jumpSearch" type="button" class="btn btn-secondary">Jump Search</button>
@@ -195,12 +195,12 @@
                 <button id="stratosSearch" type="button" class="btn btn-secondary">Stratos Search</button>
             </div>
 
-            <!--<div id="stepButtons" class="btn-group" role="group">
+            <div id="stepButtons" class="btn-group" role="group">
                 <button id="undo" type="button" class="btn btn-outline-secondary">Undo Step</button>
                 <button id="pause" type="button" class="btn btn-outline-secondary">Pause</button>
                 <button id="next" type="button" class="btn btn-outline-secondary">Next Step</button>
                 <button id="skipForward" type="button" class="btn btn-outline-secondary">Skip Forward</button>
-            </div>-->
+            </div>
         </div>
 
         <div id="table_container" class="container-fluid" align="center">
@@ -233,12 +233,11 @@
         crossorigin="anonymous"></script>
 
     <!--myScripts-->
-    <script type="text/javascript" src="GenerateRandomNumbers.js"></script>
-    <script type="text/javascript" src="GeneralFunctions.js"></script>
-    <script type="text/javascript" src="LinearSearch.js"></script>
-    <script type="text/javascript" src="BinarySearch.js"></script>
-    <script type="text/javascript" src="JumpSearch.js"></script>
-
+    <script type="text/javascript" src="scripts/GenerateRandomNumbers.js"></script>
+    <script type="text/javascript" src="scripts/GeneralFunctions.js"></script>
+    <script type="text/javascript" src="scripts/LinearSearch.js"></script>
+    <script type="text/javascript" src="scripts/BinarySearch.js"></script>
+    <script type="text/javascript" src="scripts/JumpSearch.js"></script>
 
 </body>
 
