--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -238,6 +238,7 @@
     <script type="text/javascript" src="scripts/LinearSearch.js"></script>
     <script type="text/javascript" src="scripts/BinarySearch.js"></script>
     <script type="text/javascript" src="scripts/JumpSearch.js"></script>
+    <script type="text/javascript" src="scripts/stepButtons.js"></script>
 
 </body>
 
