having problems with linear step buttons and binary not in array number

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -9,6 +9,7 @@
 
     <!--Favicon-->
     <link rel="icon" type="image/png" href="resources/logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--Bootstrap required Libraries-->
 
@@ -195,10 +196,10 @@
         </div>
 
         <div id="stepButtons" class="btn-group" role="group">
-            <button id="undo" type="button" class="btn btn-outline-secondary">Undo Step</button>
-            <button id="pause" type="button" class="btn btn-outline-secondary">Pause</button>
-            <button id="next" type="button" class="btn btn-outline-secondary">Next Step</button>
-            <button id="skipForward" type="button" class="btn btn-outline-secondary">Skip Forward</button>
+            <button id="undo" type="button" class="btn btn-outline-secondary" disabled>Undo Step</button>
+            <button id="pause" type="button" class="btn btn-outline-secondary" disabled>Pause</button>
+            <button id="next" type="button" class="btn btn-outline-secondary" disabled>Next Step</button>
+            <button id="skipForward" type="button" class="btn btn-outline-secondary" disabled>Skip Forward</button>
         </div>
     </div>
 
