sticky search buttons on scroll and jump search implementation done

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -161,9 +161,9 @@
     </div>
 </div>
 <!-- Page Content -->
-<div id="body_container">
+<div class="body_container">
 
-    <div id="AlgorithmControlSection">
+    <div class="AlgorithmControlSection">
         <div id="inputs" class="input-group" role="group">
             <input class="form-control" min="0" max="9999" id="arraySize" type="number"
                    placeholder="Specify Array Size (Default: 100)"/>
@@ -207,9 +207,9 @@
 
     </div>
 
-    <div id="code_container" class="container-fluid" align="center">
+    <!--<div id="code_container" class="container-fluid" align="center">
 
-    </div>
+    </div>-->
 
     <div id="snackbar">This message handled in javascript</div>
 
