interpolation search completed fibonacci started

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -241,6 +241,8 @@
 <script type="text/javascript" src="scripts/LinearSearch.js"></script>
 <script type="text/javascript" src="scripts/BinarySearch.js"></script>
 <script type="text/javascript" src="scripts/JumpSearch.js"></script>
+<script type="text/javascript" src="scripts/InterpolationSearch.js"></script>
+<script type="text/javascript" src="scripts/FibonacciSearch.js"></script>
 <script type="text/javascript" src="scripts/StepButtons.js"></script>
 
 </body>
