some ui changes made, specially for mobile devices

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -9,7 +9,7 @@
 
     <!--Favicon-->
     <link rel="icon" type="image/png" href="resources/logo.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!--Bootstrap required Libraries-->
 
@@ -44,6 +44,8 @@
 
     <!--MyCss-->
     <link rel="stylesheet" href="stylesheets/HomeScreen.css">
+    <link rel="stylesheet" href="stylesheets/SnackBar.css">
+    <link rel="stylesheet" href="stylesheets/Modal.css">
 </head>
 
 <body class="MainPageStyling">
@@ -53,7 +55,7 @@
     <div class="container">
         <a class="navbar-brand" href="HomeScreen.html">
             <img src="resources/logo1.png"/> Implementation and use of Search in Visualized Environment</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        <button id="navBar_toggler" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
