--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -10,7 +10,7 @@
     <!--Favicon-->
     <link rel="icon" type="image/png" href="resources/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!--Bootstrap required Libraries-->
 
     <!-- Required meta tags -->
@@ -55,7 +55,8 @@
     <div class="container">
         <a class="navbar-brand" href="HomeScreen.html">
             <img src="resources/logo1.png"/> Implementation and use of Search in Visualized Environment</a>
-        <button id="navBar_toggler" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        <button id="navBar_toggler" class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive"
                 aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -115,7 +116,8 @@
                             <img src="resources/ic_action_supervisor.png"/>
                         </td>
                         <td>
-                            <p>Supervisor Professor: Evangelos Outsios</p>
+                            <p>Supervisor Professor: <a href="http://teachers.teicm.gr/outsios/index.html">Evangelos
+                                Outsios</a></p>
                         </td>
                     </tr>
                     <tr>
@@ -193,8 +195,9 @@
             <button id="binarySearch" type="button" class="btn btn-secondary">Binary Search</button>
             <button id="jumpSearch" type="button" class="btn btn-secondary">Jump Search</button>
             <button id="interpolationSearch" type="button" class="btn btn-secondary">Interpolation Search</button>
+            <button id="exponentialSearch" type="button" class="btn btn-secondary">Exponential Search</button>
             <button id="fibonacciSearch" type="button" class="btn btn-secondary">Fibonacci Search</button>
-            <button id="stratosSearch" type="button" class="btn btn-secondary">Stratos Search</button>
+            <!--<button id="stratosSearch" type="button" class="btn btn-secondary">Stratos Search</button>-->
         </div>
 
         <div id="stepButtons" class="btn-group" role="group">
@@ -244,6 +247,7 @@
 <script type="text/javascript" src="scripts/BinarySearch.js"></script>
 <script type="text/javascript" src="scripts/JumpSearch.js"></script>
 <script type="text/javascript" src="scripts/InterpolationSearch.js"></script>
+<script type="text/javascript" src="scripts/ExponentialSearch.js"></script>
 <script type="text/javascript" src="scripts/FibonacciSearch.js"></script>
 <script type="text/javascript" src="scripts/StepButtons.js"></script>
 
